# blog-be-rs

./: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260409_061449_create_user_table.rs
src/: main.rs
src/entity/: mod.rs  post.rs  prelude.rs  user.rs
src/routes/: auth_routes.rs  mod.rs  post_routes.rs  user_routes.rs
src/routes/handlers/: auth_handlers.rs  home_handler.rs  mod.rs  post_handlers.rs  user_handlers.rs
src/routes/middlewares/: auth_middleware.rs
src/utils/: api_response.rs  app_state.rs  constants.rs  jwt.rs
