[package]
name = "blog-be"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
actix-web = "4.13.0"
serde = "1.0.228"
serde_json = "1.0.149"
env_logger = "0.11.10"
dotenv = "0.15.0"
lazy_static = "1.5.0"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sha256 = "1.6.0"
chrono = "0.4.44"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
actix-web-lab = "0.26.0"
actix-multipart = "0.7.2"
sanitize-filename = "0.6.0"

[dependencies.uuid]
version = "1.23.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
